# cy-weather

./: index.html  prometheus.yml
.github/workflows/: python-tests.yml
api/: main.py  pyproject.toml  requirements.txt
api/src/: metrics.py
api/src/resources/: weather_resource.py
tests/: test_weather_routes.py
